@@ -1,5 +1,11 @@
 2014-08-27  David Malcolm  <dmalcolm@redhat.com>
 
+	* varasm.c (mark_constants): Convert a GET_CODE check into a
+	dyn_cast, strengthening local "seq" from rtx to rtx_sequence *.
+	Use methods of rtx_sequence to clarify the code.
+
+2014-08-27  David Malcolm  <dmalcolm@redhat.com>
+
 	* sched-vis.c (print_pattern): Within SEQUENCE case, introduce a
 	local "seq" via a checked cast, and use methods of rtx_sequence
 	to simplify the code.
